code for slider-container

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +13,17 @@
     <!-- =============== link fontawesome =============== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
+
 <body>
 
     <!-- =================== header section ================ -->
-     <header>
-        
+    <header>
+
 
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="	https://framerusercontent.com/images/apE2tIqb1SpkFBcRkZky8sCio.gif" alt="logo"></a>
+                <a href="index.html"><img src="	https://framerusercontent.com/images/apE2tIqb1SpkFBcRkZky8sCio.gif"
+                        alt="logo"></a>
             </div>
             <ul>
                 <li><a href="index.html">Payments</a></li>
@@ -40,28 +43,63 @@
             <button class="signup">signup</button>
         </div>
 
-            <!-- <div class="icons">
+        <!-- <div class="icons">
                 <i class="fas fa-search" id="search-btn"></i>
                 <i class="fas fa-bars" id="menu-btn"></i>
                 <i class="fas fa-times" id="close-btn"></i>
             </div> -->
-     </header>
+    </header>
 
 
 
-    <!-- =================== main section ================ -->
-     <main>
-        <div class="main-container">
-            <div class="main-content">
-                <h1>Payments, Banking, Payroll and more</h1>
-                <p>Accept payments, disburse funds, manage your business, and much more with Razorpay</p>
-                <button>Get Started</button>
+    <!-- =================== main container ================ -->
+    <section class="main-container">
+        <div class="container-slider">
+            <div class="slides">
+                <!--===== Slide 1 ========-->
+                <div class="slide">
+                    <img src="https://framerusercontent.com/images/d9x6O1t3SDJ3xyeUtMH0yMMR7wQ.png" alt="Image 1">
+                    <div class="content">
+                        <h2>Payments, Banking, Payroll and more</h2>
+                        <p>Paragraph for slide 1.</p>
+                    </div>
+                </div>
+                <!--======= Slide 2 =========-->
+                <div class="slide">
+                    <img src="https://framerusercontent.com/images/RieeZSgqD36zjJi3dS0VM0t90.png
+                    " alt="Image 2">
+                    <div class="content">
+                        <h2>Heading 2</h2>
+                        <p>Paragraph for slide 2.</p>
+                    </div>
+                </div>
+                <!--========== Slide 3 =========-->
+                <div class="slide">
+                    <img src="	https://framerusercontent.com/images/fsvl6A0K421z34wQeafUYRVP9sQ.png" alt="Image 3">
+                    <div class="content">
+                        <h2>Heading 3</h2>
+                        <p>Paragraph for slide 3.</p>
+                    </div>
+                </div>
+                <!--======== Slide 4 =============-->
+                <div class="slide">
+                    <img src="	https://framerusercontent.com/images/6Ns9ktZf8W5LOL1QZIWsQBCKI.webp?scale-down-to=1024" alt="Image 4">
+                    <div class="content">
+                        <h2>Heading 4</h2>
+                        <p>Paragraph for slide 4.</p>
+                    </div>
+                </div>
             </div>
         </div>
-     </main>
+        <!-- <div class="main-content">
+                <h1>Payments, Banking, Payroll and more</h1>
+                <p>Accept payments, disburse funds, manage your business, and much more with Razorpay</p>
+            </div> -->
+    </section>
 
 
     <!-- =================== link js file ================ -->
     <script src="script.js"></script>
 </body>
+
 </html>
