--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- =============== link fontawesome =============== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         <div class="side-btn">
             <i class="fas fa-bars"></i>
             <button class="login">login</button>
-            <button class="signup">signup</button>
+            <button class="signup">signup  <i class="fa-solid fa-arrow-right-long"></i></button>
         </div>
 
         <!-- <div class="icons">
@@ -56,29 +56,38 @@
     <section class="main-container">
         <div class="container-slider">
             <div class="slides">
+
                 <!--===== Slide 1 ========-->
                 <div class="slide">
                     <img src="https://framerusercontent.com/images/d9x6O1t3SDJ3xyeUtMH0yMMR7wQ.png" alt="Image 1">
                     <div class="content">
-                        <h2>Payments, Banking, Payroll and more</h2>
-                        <p>Paragraph for slide 1.</p>
+                        <h2>Payments, Banking,</h2>
+                        <p>Payroll and more</p>
+                        <button class="signup">signup  <i class="fa-solid fa-arrow-right-long"></i></button>
+
                     </div>
                 </div>
+
                 <!--======= Slide 2 =========-->
                 <div class="slide">
                     <img src="https://framerusercontent.com/images/RieeZSgqD36zjJi3dS0VM0t90.png
                     " alt="Image 2">
                     <div class="content">
-                        <h2>Heading 2</h2>
-                        <p>Paragraph for slide 2.</p>
+                        <h2>Effortless Banking</h2>
+                        <p> for India's finest disruptors</p>
+                        <button class="signup">signup now <i class="fa-solid fa-arrow-right-long"></i></button>
+
                     </div>
                 </div>
+
                 <!--========== Slide 3 =========-->
                 <div class="slide">
                     <img src="	https://framerusercontent.com/images/fsvl6A0K421z34wQeafUYRVP9sQ.png" alt="Image 3">
                     <div class="content">
-                        <h2>Heading 3</h2>
-                        <p>Paragraph for slide 3.</p>
+                        <h2>Easy In-Person Payments</h2>
+                        <p> for India's finest disruptors</p>
+                        <button class="signup">signup now <i class="fa-solid fa-arrow-right-long"></i></button>
+
                     </div>
                 </div>
                 <!--======== Slide 4 =============-->
@@ -86,7 +95,9 @@
                     <img src="	https://framerusercontent.com/images/6Ns9ktZf8W5LOL1QZIWsQBCKI.webp?scale-down-to=1024" alt="Image 4">
                     <div class="content">
                         <h2>Heading 4</h2>
-                        <p>Paragraph for slide 4.</p>
+                        <p> for India's finest disruptors</p>
+                        <button class="signup">signup now <i class="fa-solid fa-arrow-right-long"></i></button>
+
                     </div>
                 </div>
             </div>
